--- a/sources/nyc/connection.yaml
+++ b/sources/nyc/connection.yaml
@@ -1,4 +1,8 @@
 # This file was automatically generated
-name: nyc
 type: motherduck
-options: {}
+name: nyc
+options:
+  database: sample_data
+# Advanced Options, you probably don't want to change this
+buildOptions:
+  batchSize: 1000000
