--- a/.github/workflows/deploy-hugging-face.yml
+++ b/.github/workflows/deploy-hugging-face.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Deploy to Hugging Face Space
         run: |
           # Update to use your repo
-          huggingface-cli upload archiesarrewood/nyc-taxi ./build --delete="*" --repo-type=space
+          huggingface-cli upload archiesarrewood/nyc-taxi ./build --repo-type=space
